--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.3",
+    "typescript-plugin-css-modules": "^3.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -48,6 +49,9 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^4.0.0"
+    "autoprefixer": "^10.4.12",
+    "gh-pages": "^4.0.0",
+    "postcss": "^8.4.17",
+    "tailwindcss": "^3.1.8"
   }
 }
